<?xml version="1.0" encoding="utf-8"?>
<com.kennyc.view.MultiStateView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/multiStateView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    app:msv_animateViewChanges="true"
    app:msv_emptyView="@layout/empty_view"
    app:msv_errorView="@layout/error_view"
    app:msv_loadingView="@layout/loading_view"
    app:msv_viewState="content"
    tools:openDrawer="start">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <android.support.constraint.Guideline
            android:id="@+id/guideline8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.015" />


        <android.support.constraint.Guideline
            android:id="@+id/guideline13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2255" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.445" />


        <android.support.constraint.Guideline
            android:id="@+id/guideline16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.6673" />


        <android.support.constraint.Guideline
            android:id="@+id/guideline18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.8897" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.985" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.015" />


        <android.support.constraint.Guideline
            android:id="@+id/guideline20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.7" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.4" />



        <android.support.v7.widget.CardView

            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="3dp"
            android:layout_marginEnd="3dp"
            android:layout_marginStart="3dp"
            android:layout_marginTop="3dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline13"
            app:layout_constraintEnd_toStartOf="@+id/guideline15"
            app:layout_constraintStart_toStartOf="@+id/guideline17"
            app:layout_constraintTop_toBottomOf="@+id/guideline8">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/card_earn_unlimited"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="5dp"
                    android:gravity="left"
                    android:text="@string/earsn_unlimited_points"
                    android:textColor="@color/txtHome"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="4dp"
                    android:gravity="center"
                    android:text="@string/games_and_more"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView11" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="12dp"
                    android:gravity="left"
                    android:text="@string/earn_by_watching_videos_playing"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView10" />


            </android.support.constraint.ConstraintLayout>


        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView

            android:id="@+id/card_video"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="3dp"
            android:layout_marginEnd="3dp"
            android:layout_marginStart="3dp"
            android:layout_marginTop="3dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline14"
            app:layout_constraintEnd_toStartOf="@+id/guideline15"
            app:layout_constraintHorizontal_bias="0.533"
            app:layout_constraintStart_toStartOf="@+id/guideline17"
            app:layout_constraintTop_toBottomOf="@+id/guideline13">



            <android.support.constraint.ConstraintLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:textColor="@color/txtHome"
                    android:id="@+id/textView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/videos"

                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toTopOf="@+id/textView16"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView14"
                    app:srcCompat="@drawable/coin" />

                <TextView
                    android:textSize="15sp"
                    android:id="@+id/textView15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/_30_pts"
                    android:textColor="@color/colorPtsEarn"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView3"
                    app:layout_constraintStart_toEndOf="@+id/imageView3"
                    app:layout_constraintTop_toTopOf="@+id/imageView3" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginBottom="5dp"
                    android:text="EARN NOW"
                    android:textColor="@color/txtStartEarning"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />


            </android.support.constraint.ConstraintLayout>


        </android.support.v7.widget.CardView>


        <!--<android.support.v7.widget.CardView-->

            <!--android:layout_width="0dp"-->
            <!--android:layout_height="0dp"-->
            <!--android:layout_marginBottom="3dp"-->
            <!--android:layout_marginEnd="3dp"-->
            <!--android:layout_marginStart="3dp"-->
            <!--android:layout_marginTop="3dp"-->
            <!--app:layout_constraintBottom_toTopOf="@+id/guideline16"-->
            <!--app:layout_constraintEnd_toStartOf="@+id/guideline15"-->
            <!--app:layout_constraintStart_toStartOf="@+id/guideline17"-->
            <!--app:layout_constraintTop_toBottomOf="@+id/guideline14">-->



            <!--<android.support.constraint.ConstraintLayout-->
                <!--android:id="@+id/card_live_games"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent">-->


                <!--<TextView-->
                    <!--android:id="@+id/textView17"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginStart="24dp"-->
                    <!--android:layout_marginTop="10dp"-->
                    <!--android:text="@string/live_games"-->
                    <!--android:textColor="@color/colorTextEarn"-->
                    <!--android:textSize="22sp"-->
                    <!--android:textStyle="bold"-->
                    <!--app:layout_constraintStart_toStartOf="parent"-->
                    <!--app:layout_constraintTop_toTopOf="parent" />-->

                <!--<ImageView-->
                    <!--android:id="@+id/imageView4"-->
                    <!--android:layout_width="20dp"-->
                    <!--android:layout_height="20dp"-->
                    <!--android:layout_marginStart="24dp"-->
                    <!--android:layout_marginTop="10dp"-->
                    <!--app:layout_constraintStart_toStartOf="parent"-->
                    <!--app:layout_constraintTop_toBottomOf="@+id/textView17"-->
                    <!--app:srcCompat="@drawable/coin" />-->

                <!--<TextView-->
                    <!--android:textSize="15sp"-->
                    <!--android:id="@+id/textView18"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginStart="5dp"-->
                    <!--android:text="@string/_200_pts"-->
                    <!--android:textColor="@color/colorPtsEarn"-->
                    <!--app:layout_constraintBottom_toBottomOf="@+id/imageView4"-->
                    <!--app:layout_constraintStart_toEndOf="@+id/imageView4"-->
                    <!--app:layout_constraintTop_toTopOf="@+id/imageView4" />-->

                <!--<TextView-->
                    <!--android:id="@+id/textView19"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginBottom="10dp"-->
                    <!--android:layout_marginStart="24dp"-->
                    <!--android:text="@string/earn_now"-->
                    <!--android:textColor="@color/txtStartEarning"-->
                    <!--android:textSize="17sp"-->
                    <!--android:textStyle="bold"-->
                    <!--app:layout_constraintBottom_toBottomOf="parent"-->
                    <!--app:layout_constraintStart_toStartOf="parent" />-->
            <!--</android.support.constraint.ConstraintLayout>-->


        <!--</android.support.v7.widget.CardView>-->

        <android.support.v7.widget.CardView

            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="3dp"
            android:layout_marginEnd="3dp"
            android:layout_marginStart="3dp"
            android:layout_marginTop="3dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline16"
        app:layout_constraintEnd_toStartOf="@+id/guideline15"
        app:layout_constraintStart_toStartOf="@+id/guideline17"
        app:layout_constraintTop_toBottomOf="@+id/guideline14">


            <android.support.constraint.ConstraintLayout
                android:id="@+id/card_more_offers"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:textColor="@color/txtHome"
                    android:id="@+id/textView20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/more_offers"

                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toTopOf="@+id/textView22"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView20"
                    app:srcCompat="@drawable/coin" />

                <TextView
                    android:textSize="15sp"
                    android:id="@+id/textView21"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/_1000_pts"
                    android:textColor="@color/colorPtsEarn"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView5"
                    app:layout_constraintStart_toEndOf="@+id/imageView5"
                    app:layout_constraintTop_toTopOf="@+id/imageView5" />

                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/earn_now"
                    android:textColor="@color/txtStartEarning"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>


    </android.support.constraint.ConstraintLayout>


</com.kennyc.view.MultiStateView>
